<resources>
    <string name="app_name">Contact Project</string>
    <string name="contact_hint">Enter Contact Name</string>
    <string name="phone_hint">Enter Contact Phone</string>
    <string name="show_contacts">Show All Contacts</string>
    <string name="add_contacts">Add Contact</string>
    <string name="find_contacts">Find Contact</string>
    <string name="sort_az">Sort Contacts A - Z</string>
    <string name="sort_za">Sort Contacts Z - A</string>
    <string name="delete_button">Delete item</string>
    <string name="frown_emoji">\u2639</string>
</resources>
