<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/show_all_contacts"
        android:title="@string/show_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_contact"
        android:title="@string/add_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/find_contact"
        android:title="@string/find_contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_a_z"
        android:title="@string/sort_az"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_z_a"
        android:title="@string/sort_za"
        app:showAsAction="never" />
</menu>